# SimpleCLI

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/exceptions/: CliException.hpp  DefaultOptionIsChosenExcepion.hpp  OptionAlreadyExistsException.hpp  OptionBackException.hpp  OptionDoesNotExistException.hpp  OptionQuitException.hpp
src/leaf_options/headers/: BackOption.hpp  CustomLeafOption.hpp  HelpOption.hpp  IOption.hpp  QuitOption.hpp
src/leaf_options/sources/: HelpOption.cpp
src/option_containers/headers/: BaseOptionContainer.hpp
src/option_containers/sources/: BaseOptionContainer.cpp
